# WarehouseSystem

./: .gitignore  CMakeLists.txt  README.md  ico.rc  lzRoiRegion.hobj  main.cpp  qml.qrc  ycgRoiRegion.hobj
halconPara/: preprocessParamLz.hdict  preprocessParamYcg.hdict
include/halcon12x64/: HVersNum.h
lib/halcon12x64/: halcon.lib  halconc.lib  halconcxl.lib  halconxl.lib
src/hal/: CMakeLists.txt  vm.cpp  vm.h  vmDef.h
src/hal/action/: CMakeLists.txt  iAction.cpp  iAction.h  iActionState.cpp  iActionState.h
src/hal/action/autoWork/: CMakeLists.txt  autoWorkAction.cpp  autoWorkAction.h  autoWorkLZState.cpp  autoWorkState.cpp  autoWorkState.h  discernDirectionDef.cpp  discernDirectionDef.h
src/hal/action/reset/: CMakeLists.txt  resetAction.cpp  resetAction.h  resetState.cpp  resetState.h
src/hal/action/stopWork/: CMakeLists.txt  stopAction.cpp  stopAction.h  stopState.cpp  stopState.h
src/hal/camera/: baslerCamera.cpp  baslerCameraLz.cpp  baslerCameraLz.h
src/hal/communication/: CMakeLists.txt  modbusMaster.cpp  modbusMaster.h  modbusTcp.cpp  modbusTcp.h  plcSigDef.cpp  plcSigDef.h
src/hal/communication/serialPort/: CMakeLists.txt  pullStorage.cpp  pullStorage.h  pushStorage.cpp  pushStorage.h  serialPort.cpp  serialPort.h  serialPortLed.cpp  serialPortLed.h  typeDef.h
src/imageProcess/: CMakeLists.txt  basic.h  imageProcess.cpp  imageProcess.h
src/imageProcess/createRoi/: CMakeLists.txt  createRoi.cpp  createRoi.h
src/imageProcess/discernDirection/: CMakeLists.txt  discernDirectionDef.h  iDiscernDirection.cpp  iDiscernDirection.h
src/imageProcess/discernDirection/discernDirection/: discernLzDirection.cpp  discernLzDirection.h  discernYcgDirection.cpp  discernYcgDirection.h
src/para/: para.cpp  para.h
src/para/define/: cameraDef.cpp  cameraDef.h  cameraLzDef.cpp  cameraLzDef.h  communicationDef.cpp  paraDef.h  paraNode.cpp  pcDef.cpp  pcDef.h  roiRegionLzDef.cpp  roiRegionLzDef.h  roiRegionYcgDef.cpp  roiRegionYcgDef.h  scannerDef.cpp  scannerDef.h  serialPortDef.cpp  serialPortDef.h
src/system/: CMakeLists.txt  basic.h  systemService.cpp
src/system/tool/: fileTool.cpp  fileTool.h  halconTool.cpp  halconTool.h
src/ui/: CMakeLists.txt  basic.cpp  basic.h  mainWindow.cpp  mainWindow.h  mainWindowDef.h
src/ui/assemblyTypeWindow/: CMakeLists.txt  assemblyTypeWindow.cpp  assemblyTypeWindow.h
src/ui/controlWidget/: controlWidget.cpp  controlWidget.h
src/ui/setParaWindow/: setParaWindow.cpp  setParaWindow.h
src/ui/setParaWindow/paraTree/: paraEditor.cpp  paraTreeDelegateDraw.h
src/ui/stateLedWidget/: assembleStateLed.cpp  assembleStateLed.h  plcStateLed.cpp  plcStateLed.h  ycgStateLed.cpp  ycgStateLed.h
